Removed deprecated clean package. created cleanall/clean task

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "gulp-autoprefixer": "0.0.7",
     "gulp-bower": "0.0.5",
     "gulp-changed": "^0.4.0",
-    "gulp-clean": "^0.3.0",
     "gulp-concat": "^2.2.0",
     "gulp-csso": "^0.2.9",
     "gulp-imagemin": "^0.6.0",
@@ -24,6 +23,7 @@
     "gulp-nodemon": "^1.0.4",
     "gulp-plumber": "^0.6.2",
     "gulp-rename": "^1.2.0",
+    "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
     "gulp-uglify": "^0.3.0",
     "jsdoc": "^3.3.0-alpha7",
