--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bamboo": "bin/tests.sh"
+    "bamboo": "node node_modules/nodeunit/bin/nodeunit --reporter junit --output test-reports/ tests/"
   },
   "license": "MIT",
   "devDependencies": {
