--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bamboo": "node node_modules/nodeunit/bin/nodeunit --reporter junit --output test-reports/ tests/"
+    "bamboo": "node node_modules/nodeunit/bin/nodeunit --reporter junit --output test-reports/ tests/ && exit 0"
   },
   "license": "MIT",
   "devDependencies": {
-    "assert": "^1.1.1",
     "event-stream": "^3.1.5",
     "gulp": "^3.7.0",
     "gulp-angular-templatecache": "^1.1.3",
@@ -29,8 +28,6 @@
     "gulp-sass": "^0.7.2",
     "gulp-uglify": "^0.3.0",
     "jsdoc": "^3.3.0-alpha7",
-    "mocha": "^1.20.1",
-    "mocha-bamboo-reporter": "^1.0.6",
     "nodeunit": "^0.9.0"
   },
   "dependencies": {
