--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.6.2",
     "gulp-nodemon": "^1.0.4",
+    "gulp-nodeunit": "0.0.5",
     "gulp-plumber": "^0.6.2",
     "gulp-rename": "^1.2.0",
     "gulp-rimraf": "^0.1.0",
